sails/macros/core/tests/snapshots/gservice__works_with_extends.snap
---
source: macros/core/tests/gservice.rs
expression: result
---
impl SomeService {
    pub fn do_this(&mut self) -> u32 {
        42
    }
}
pub struct Exposure<T> {
    message_id: sails::MessageId,
    route: &'static [u8],
    #[cfg(not(target_arch = "wasm32"))]
    inner: Box<T>,
    #[cfg(not(target_arch = "wasm32"))]
    inner_ptr: *const T,
    #[cfg(target_arch = "wasm32")]
    inner: T,
    base_0: <ExtendedService1 as sails::gstd::services::Service>::Exposure,
    base_1: <ExtendedService2 as sails::gstd::services::Service>::Exposure,
}
impl Exposure<SomeService> {
    pub fn do_this(&mut self) -> u32 {
        let exposure_scope = sails::gstd::services::ExposureCallScope::new(self);
        self.inner.do_this()
    }
    pub fn as_base_0(
        &self,
    ) -> &<ExtendedService1 as sails::gstd::services::Service>::Exposure {
        &self.base_0
    }
    pub fn as_base_1(
        &self,
    ) -> &<ExtendedService2 as sails::gstd::services::Service>::Exposure {
        &self.base_1
    }
    pub async fn handle(&mut self, input: &[u8]) -> Vec<u8> {
        self.try_handle(input)
            .await
            .unwrap_or_else(|| {
                {
                    let mut __input = input;
                    let input = String::decode(&mut __input)
                        .unwrap_or_else(|_| {
                            if input.len() <= 8 {
                                format!("0x{}", sails::hex::encode(input))
                            } else {
                                format!(
                                    "0x{}..{}", sails::hex::encode(& input[..4]),
                                    sails::hex::encode(& input[input.len() - 4..])
                                )
                            }
                        });
                    panic!("Unknown request: {}", input)
                }
            })
    }
    pub async fn try_handle(&mut self, input: &[u8]) -> Option<Vec<u8>> {
        if input.starts_with(&[24u8, 68u8, 111u8, 84u8, 104u8, 105u8, 115u8]) {
            let output = self.__do_this(&input[7usize..]).await;
            static INVOCATION_ROUTE: [u8; 7usize] = [
                24u8,
                68u8,
                111u8,
                84u8,
                104u8,
                105u8,
                115u8,
            ];
            return Some([INVOCATION_ROUTE.as_ref(), &output].concat());
        }
        if let Some(output) = self.base_0.try_handle(input).await {
            return Some(output);
        }
        if let Some(output) = self.base_1.try_handle(input).await {
            return Some(output);
        }
        None
    }
    async fn __do_this(&mut self, mut input: &[u8]) -> Vec<u8> {
        let request = __DoThisParams::decode(&mut input)
            .expect("Failed to decode request");
        let result = self.do_this();
        return result.encode();
    }
}
impl sails::gstd::services::Exposure for Exposure<SomeService> {
    fn message_id(&self) -> sails::MessageId {
        self.message_id
    }
    fn route(&self) -> &'static [u8] {
        self.route
    }
}
impl sails::gstd::services::Service for SomeService {
    type Exposure = Exposure<SomeService>;
    fn expose(
        self,
        message_id: sails::MessageId,
        route: &'static [u8],
    ) -> Self::Exposure {
        #[cfg(not(target_arch = "wasm32"))]
        let inner_box = Box::new(self);
        #[cfg(not(target_arch = "wasm32"))]
        let inner = inner_box.as_ref();
        #[cfg(target_arch = "wasm32")]
        let inner = &self;
        Self::Exposure {
            message_id,
            route,
            base_0: <ExtendedService1 as Clone>::clone(
                    AsRef::<ExtendedService1>::as_ref(inner),
                )
                .expose(message_id, route),
            base_1: <ExtendedService2 as Clone>::clone(
                    AsRef::<ExtendedService2>::as_ref(inner),
                )
                .expose(message_id, route),
            #[cfg(not(target_arch = "wasm32"))]
            inner_ptr: inner_box.as_ref() as *const Self,
            #[cfg(not(target_arch = "wasm32"))]
            inner: inner_box,
            #[cfg(target_arch = "wasm32")]
            inner: self,
        }
    }
}
impl sails::meta::ServiceMeta for SomeService {
    fn commands() -> sails::scale_info::MetaType {
        sails::scale_info::MetaType::new::<meta::CommandsMeta>()
    }
    fn queries() -> sails::scale_info::MetaType {
        sails::scale_info::MetaType::new::<meta::QueriesMeta>()
    }
    fn events() -> sails::scale_info::MetaType {
        sails::scale_info::MetaType::new::<meta::EventsMeta>()
    }
    fn base_services() -> impl Iterator<Item = sails::meta::AnyServiceMeta> {
        [
            sails::meta::AnyServiceMeta::new::<ExtendedService1>(),
            sails::meta::AnyServiceMeta::new::<ExtendedService2>(),
        ]
            .into_iter()
    }
}
use sails::Decode as __ServiceDecode;
use sails::Encode as __ServiceEncode;
use sails::TypeInfo as __ServiceTypeInfo;
#[derive(__ServiceDecode, __ServiceTypeInfo)]
#[codec(crate = sails::scale_codec)]
#[scale_info(crate = sails::scale_info)]
pub struct __DoThisParams {}
mod meta {
    use super::*;
    #[derive(__ServiceTypeInfo)]
    #[scale_info(crate = sails::scale_info)]
    pub enum CommandsMeta {
        DoThis(__DoThisParams, u32),
    }
    #[derive(__ServiceTypeInfo)]
    #[scale_info(crate = sails::scale_info)]
    pub enum QueriesMeta {}
    #[derive(__ServiceTypeInfo)]
    #[scale_info(crate = sails::scale_info)]
    pub enum NoEvents {}
    pub type EventsMeta = NoEvents;
}
